--- a/QtInstall.qrc
+++ b/QtInstall.qrc
@@ -1,9 +1,10 @@
 <RCC>
     <qresource prefix="/helperApps" >
-        <file alias="InstallDriver.exe" >ressources/InstallDriver.exe</file>
+        <file alias="InstallHelper.exe" >ressources/InstallHelper.exe</file>
         <file alias="SSLoginItems.bin" >ressources/SSLoginItems.bin</file>
     </qresource>
     <qresource prefix="/documentation" >
         <file alias="QtInstall.pdf" >ressources/QtInstall.pdf</file>
+        <file alias="GPL-license.html" >LICENSE.html</file>
     </qresource>
 </RCC>
